# klint

./: .clang-format  .gitignore  .gitmodules  License.md  Makefile  Makefile.base  Makefile.benchmarking  Makefile.nf  ReadMe.md  build-and-run.sh
tool/: .gitignore  ReadMe.md  TODO.md  __init__.py  constraints  klint.py  log_lb_long_run.txt  main.py  pyproject.toml  requirements.txt  setup-virtualenv.sh  setup.sh  vigor.py
tool/binary/: __init__.py  bitsizes.py  cast.py  casts.py  clock.py  exceptions.py  executor.py  ghost_maps.py  hash_dict.py  maps_memory.py  memory_fractional.py  memory_segmented.py  memory_split.py  merging_technique.py  metadata.py  objs_memory.py  path.py  pci.py  plugin_dummy.py  sizes.py  statistics.py  symbol_factory.py  utils.py
tool/executors/: __init__.py
tool/executors/binary/: bitsizes.py  cast.py  clock.py  executor.py  ghost_maps.py  memory_fractional.py  (+6 more)
tool/kalm/: __init__.py  clock.py  engine.py  executor.py  library.py  merging.py  solver.py  utils.py
tool/klint/: __init__.py  __main__.py  executor.py  ghostmaps.py  heap.py  statistics.py
tool/nf/: __init__.py  ast_util.py  breakpoints.py  defs.py  device.py  executor.py  log.py  main.py  manager.py  old.py  reg_util.py  spec_act.py  spec_glo.py  spec_reg.py  tests.py
tool/python/: __init__.py  executor.py  symbex.py
tool/tests/: empty_binary  test.py
tool/traces/: generate.py  helpers.py
tool/verif/: __init__.py  common.py  defs.py  executor.py  memory_simple.py  persistence.py  predefs.py  replay.py  spec_predefs.py  spec_prefix.py  spec_utils.py  symbex.py
(+622 files in other folders)
