[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "klint"
dynamic = ["version"]
description = "Formally verify network functions"
readme = "ReadMe.md"
license = { text = "MIT" }

requires-python = ">=3.10"

dependencies = ["angr", "claripy", "pyvex", "z3-solver"]

[project.scripts]
klint = "klint.__main__:main"

[tool.setuptools.packages.find]
include = ["kalm*", "klint*"]

[tool.setuptools_scm]
root = ".."
